<resources>
    <string name="app_name">Campus Recruitment
        System</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>


    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear_text">Clear text</string>
    <string name="StudentName">Student Name</string>
    <string name="FatherName">Father Name</string>
    <string name="DateofBirth">Date Of Birth</string>
    <string name="Nationality">Nationality</string>
    <string name="Hobbies">Hobbies</string>
    <string name="SchoolName">School Name</string>
    <string name="SchoolEndDate">School End Date</string>
    <string name="Degree">Degree College Name</string>
    <string name="Gradenddate">Graduation End Date</string>
    <string name="Achievements1">Achievement1</string>
    <string name="Achievements2">Achievement2</string>
    <string name="SSCPercentage">SSC Percentage</string>
    <string name="degreepercentage">Degree Percentage</string>
</resources>
